# lemonbuddy

./: .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: bar.hpp  eventloop.hpp  exception.hpp  lemonbuddy.hpp  version.hpp
include/interfaces/: lemonbar.hpp
include/modules/: i3.hpp
include/services/: builder.hpp  command.hpp
include/utils/: io.hpp  macros.hpp  xcb.hpp
lib/cpp_freetype/: CMakeLists.txt  README.md
lib/lemonbar/: CMakeLists.txt
lib/lemonbar/include/: lemonbar.h
lib/lemonbar/src/: lemonbar.c
src/: CMakeLists.txt  bar.cpp  eventloop.cpp  lemonbuddy.cpp
src/drawtypes/: ramp.cpp
src/interfaces/: lemonbar.cpp  net.cpp
src/modules/: battery.cpp  network.cpp  volume.cpp
src/services/: builder.cpp  command.cpp
src/utils/: io.cpp
